--- a/.github/workflows/build-rt-k3-mainline.yml
+++ b/.github/workflows/build-rt-k3-mainline.yml
@@ -33,7 +33,7 @@ env:
 
 jobs:
   build:
-    runs-on: ubuntu-16.04
+    runs-on: Ubuntu 20.04
     if: github.event.repository.owner.id == github.event.sender.id
 
     steps:
